--- a/conf/language_instructions.toml
+++ b/conf/language_instructions.toml
@@ -1,6 +1,6 @@
 # Instruction guide for installation and running programming languages
 
-[instructions]
+[language_instructions]
 ABAP = ["abap build", "abap run"]
 ActionScript = ["mxmlc main.as", "flashplayer main.swf"]
 Ada = ["gnatmake main.adb", "./main"]
@@ -20,13 +20,11 @@ FS = ["dotnet build", "dotnet run"]
 Forth = ["gforth main.fs"]
 Go = ["go build -o myapp", "./myapp"]
 Groovy = ["grape install", "groovy main.groovy"]
-Groovy = ["grape install", "groovy main.groovy"]
 Haskell = ["ghc -o myapp main.hs", "./myapp"]
 Java = ["mvn clean install", "java -jar target/myapp.jar"]
 JavaScript = ["npm install", "npm start"]
 Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
 Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
-Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
 Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
 MATLAB = ["matlab -r main.m"]
 Objective-C = ["gcc -framework Foundation main.m -o myapp", "./myapp"]
