--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -2,7 +2,7 @@
 [api]
 api_key = ""
 engine = "text-davinci-003"
-prompt_intro = """Generate a short summary that describes the capabilities of th GitHub project."""
+prompt_intro = """Generate a short summary that describes the capabilities of the GitHub project {}."""
 prompt_slogan = """Generate a slogan for the GitHub project {}."""
 temperature = 0.5
 max_tokens = 100
