Add support for Rust and JavaScript repos.

--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -1,8 +1,8 @@
-# OpenAI API
+# OpenAI API language model parameters
 [api]
 api_key = ""
 engine = "text-davinci-003"
-prompt_intro = """Generate a short summary that describes the capabilities of the GitHub project."""
+prompt_intro = """Generate a short summary that describes the capabilities of the GitHub project {}."""
 prompt_slogan = """Generate a slogan for the GitHub project {}."""
 temperature = 0.5
 max_tokens = 100
@@ -10,7 +10,7 @@ top_p = 1.0
 frequency_penalty = 0.0
 presence_penalty = 0.0
 
-# GitHub Repository
+# Repository (local and remote)
 [github]
 local = ""
 name = ""
