--- a/conf/file_extensions.toml
+++ b/conf/file_extensions.toml
@@ -1,6 +1,5 @@
 
 # Map file extensions to programming languages.
-
 [file_extensions]
 asm = "Assembly"
 c = "C"
@@ -55,3 +54,34 @@ vh = "Verilog"
 xml = "XML"
 yaml = "YAML"
 yml = "YAML"
+
+# Files to ignore.
+[ignore]
+file_extensions = [
+    ".*",
+    ".csv",
+    ".json",
+    ".md",
+    ".pyc",
+    ".txt",
+    ".yml",
+    ".yaml",
+    ".config",
+    ".log",
+    ".ini",
+    ".cfg",
+    ".xml",
+    ".toml",
+    ".git",
+    ".idea",
+    "__pycache__",
+    "__init__",
+    "requirements",
+    "setup",
+    "test",
+    "README",
+    "LICENSE",
+    "Makefile",
+    "CONTRIBUTING",
+    "CODE_OF_CONDUCT",
+]
