--- a/conf/ignore_files.toml
+++ b/conf/ignore_files.toml
@@ -2,36 +2,96 @@
 
 [ignore_files]
 ignore = [
-  ".json",
-  ".gitignore",
-  ".env",
-  ".csv",
-  ".json",
-  ".md",
-  ".pyc",
-  ".txt",
-  ".yml",
-  ".yaml",
-  ".config",
-  ".log",
-  "lock",
-  ".ini",
-  ".cfg",
-  ".xml",
-  ".toml",
-  ".git",
-  ".idea",
-  ".png",
-  ".gif",
-  "__pycache__",
-  "__init__",
-  "requirements",
-  "setup",
-  "test",
-  "README",
-  "LICENSE",
-  "Makefile",
-  "CONTRIBUTING",
-  "CODE_OF_CONDUCT",
-  "requirements.txt"
+    # Build artifacts
+    "build",
+    "dist",
+    "*.egg-info",
+    ".eggs",
+    ".coverage",
+    ".cache",
+    ".pytest_cache",
+    "htmlcov",
+    ".tox",
+    
+    # Data files
+    "data",
+    ".csv",
+    ".json",
+    ".pickle",
+    ".h5",
+    
+    # Documentation
+    "docs",
+    ".pdf",
+    ".docx",
+    ".md",
+    
+    # Images and media
+    "imgs",
+    "media",
+    "static",
+    "assets",
+    ".png",
+    ".jpg",
+    ".gif",
+    ".mp4",
+    
+    # Configuration files and credentials
+    ".env",
+    ".env.local",
+    ".env.*.local",
+    ".env.test",
+    ".env.production",
+    ".env.example",
+    ".config",
+    ".cfg",
+    ".ini",
+    ".yml",
+    ".yaml",
+    ".xml",
+    ".properties",
+    ".secret",
+    ".key",
+    ".pem",
+    ".cert",
+    ".csr",
+    ".p12",
+    
+    # Compiled code
+    "__pycache__",
+    "*.pyc",
+    "*.pyo",
+    "*.class",
+    "*.o",
+    
+    # Version control
+    ".git",
+    ".svn",
+    ".hg",
+    ".cvs",
+    
+    # Editor and IDE settings
+    ".vscode",
+    ".idea",
+    "*.sublime-*",
+    "*.swp",
+    
+    # Test and utility files
+    "test",
+    "tests",
+    "testing",
+    "tools",
+    "utils",
+    "requirements",
+    "setup",
+    "Makefile",
+    "MANIFEST",
+    "CHANGELOG",
+    "README",
+    "LICENSE",
+    "CONTRIBUTING",
+    "CODE_OF_CONDUCT",
+    "Dockerfile",
+    "Jenkinsfile",
+    "Vagrantfile",
 ]
